--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "axios": "^0.19.2",
+    "email-validator": "^2.0.4",
     "gatsby": "^2.7.5",
     "gatsby-cli": "^2.7.47",
     "gatsby-image": "^2.1.2",
