--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "Evidence",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "Evidence website",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Evidence",
   "dependencies": {
     "axios": "^0.19.2",
     "email-validator": "^2.0.4",
