:fire: Removing unused packages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Evidence",
+  "name": "evidence",
   "private": true,
   "description": "Evidence website",
   "version": "0.1.0",
@@ -9,16 +9,12 @@
     "email-validator": "^2.0.4",
     "gatsby": "^2.7.5",
     "gatsby-cli": "^2.7.47",
-    "gatsby-image": "^2.1.2",
     "gatsby-plugin-manifest": "^2.1.1",
-    "gatsby-plugin-offline": "^2.1.1",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sass": "^2.0.11",
-    "gatsby-plugin-sharp": "^2.1.2",
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-filesystem": "^2.0.37",
     "gatsby-source-ghost": "^4.0.5",
-    "gatsby-transformer-sharp": "^2.1.20",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
