--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "email-validator": "^2.0.4",
     "gatsby": "^2.7.5",
     "gatsby-plugin-manifest": "^2.1.1",
+    "gatsby-plugin-matomo": "^0.8.3",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sass": "^2.0.11",
     "gatsby-plugin-web-font-loader": "^1.0.4",
