--- a/package.json
+++ b/package.json
@@ -1,49 +1,43 @@
 {
-  "name": "polyphene",
+  "name": "polyphene.io",
+  "version": "2.0.0",
   "private": true,
-  "description": "Polyphene website",
-  "version": "0.1.0",
-  "author": "Polyphene",
-  "dependencies": {
-    "axios": "^0.19.2",
-    "email-validator": "^2.0.4",
-    "gatsby": "^2.7.5",
-    "gatsby-plugin-manifest": "^2.1.1",
-    "gatsby-plugin-matomo": "^0.8.3",
-    "gatsby-plugin-react-helmet": "^3.0.12",
-    "gatsby-plugin-sass": "^2.0.11",
-    "gatsby-plugin-web-font-loader": "^1.0.4",
-    "gatsby-source-filesystem": "^2.0.37",
-    "gatsby-source-ghost": "^4.0.5",
-    "node-sass": "^4.12.0",
-    "prop-types": "^15.7.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.1",
-    "react-textarea-autosize": "^8.2.0"
-  },
-  "devDependencies": {
-    "gatsby-cli": "^2.7.47",
-    "prettier": "^1.17.1",
-    "sass": "^1.20.3"
-  },
+  "description": "polyphene.io",
+  "author": "Polyphene <contact@polyphene.io>",
   "keywords": [
     "gatsby"
   ],
-  "license": "MIT",
   "scripts": {
-    "build": "gatsby build",
     "develop": "gatsby develop",
-    "format": "prettier --write src/**/*.{js,jsx}",
-    "start": "npm run develop",
+    "start": "gatsby develop",
+    "build": "gatsby build",
     "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
+    "clean": "gatsby clean"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+  "dependencies": {
+    "@tailwindcss/forms": "^0.5.0",
+    "aos": "^3.0.0-beta.6",
+    "axios": "^0.27.2",
+    "gatsby": "^4.13.0",
+    "gatsby-plugin-image": "^2.13.0",
+    "gatsby-plugin-manifest": "^4.13.0",
+    "gatsby-plugin-matomo": "^0.13.0",
+    "gatsby-plugin-react-helmet": "^5.13.0",
+    "gatsby-plugin-react-svg": "^3.1.0",
+    "gatsby-plugin-sass": "^5.13.0",
+    "gatsby-plugin-sharp": "^4.13.0",
+    "gatsby-plugin-sitemap": "^5.13.0",
+    "gatsby-source-filesystem": "^4.13.0",
+    "gatsby-transformer-sharp": "^4.13.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
+    "react-transition-group": "^4.4.2",
+    "sass": "^1.51.0"
   },
-  "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+  "devDependencies": {
+    "autoprefixer": "^10.4.5",
+    "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.24"
   }
 }
